# Informatika-2-ukoly-2025

./: .gitignore  .vsls.json  CMakeLists.txt  README.md  Ukol_3-15.10.cpp  desktop.ini  filtered_errors.txt  fitness kalkulacka-ukol.cpp  fitness.kalkulacka.cpp  generatory.py  main.cpp  mocnina.py  projekt.md  report.txt  sklad_data.csv  snak.cpp  studenti.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: sync_fork_upstream.yml  testCpp.yml  testPython.yml  testUkol0.yml  testUkol1.yml  testUkol2.yml  testUkol3.yml  testUkol4.yml  testUkol5.yml  testUkol6.yml  testUkol7.yml  testUkol8.yml  upstream-email-notification.yml  upstreamSync,ynk  upstreamSync.yml
151025/: fitness_kalkulacka.cpp
AOC/: AOC_21_2.cpp
REGEX/: final_dump.txt  prog.py
SkusobnaSkuska/: CMakeLists.txt  README.md  analyza.py  logger.cpp  logger.h  main.cpp  test.cpp  test_analyza.py
Sprava_studentu/: main.cpp
UKOLY Z HODIN PYTHON/AOC_2021_14/: main.py
UKOLY Z HODIN PYTHON/AOC_2023_1/: main.py
UKOLY Z HODIN PYTHON/argumenty/: main.py
UKOLY Z HODIN PYTHON/generatory/: main.py
UKOLY Z HODIN PYTHON/stromecek/: main.py
UKOLY Z HODIN PYTHON/trida/: main.py
UKOLY Z HODIN PYTHON/uloha_1/: main.py
Ukol_0/: README.md
Ukol_0/cpp/: test.cpp  (+2 more)
Ukol_1/: CMakeLists.txt  README.md  hlavni.cpp  main.cpp  projekt.md  sprava_studentu.cpp  studenti_serazeno.txt  test.cpp  text_k_analyze.txt
Ukol_1_Fitness_Kalkulacka/: info.md  main.cpp
Ukol_2/: CMakeLists.txt  README.md  main.cpp  test.cpp
Ukol_3/: CMakeLists.txt  README.md  main.cpp  test.cpp
Ukol_3_15-10-2025/: fitness_kalkulacka.cpp
Ukol_4/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  test.cpp
Ukol_5/: CMakeLists.txt  README.md  mag.cpp  mag.h  main.cpp  postava.cpp  postava.h  test.cpp  valecnik.cpp  valecnik.h
Ukol_6/: README.md  main.py  pokus.py  report.txt  studenti.txt  test.py
Ukol_7/: README.md  main.py  test.py
Ukol_8/: README.md  filtered_errors.txt  main.py  sample_data.txt  test.py
Ukol_9/: README.md  inventory.json  main.py  models.py  storage.py
Ukoly z hodiny/: caesarovaSifra.cpp  matice.cpp  selectionSort.cpp  strom.py  ukazatele.cpp
UkolyZHodin/: AdventOfCode_16,10.cpp  AdventOfCode_16.10
Ukoly_v_hodine/: Ukol_24.cpp  main.cpp
Ukoly_z_hodin/: matice.cpp  tridy.cpp
aoc_20_7/: main.cpp
aoc_6.11.2025/: aoc.cpp
data/: data.cpp  data.txt
header-guards/: foo.cpp  foo.h
moje_vlastni_picoviny/: #include iostream.cpp  main.cpp  pointery.cpp
osobní/: currency.cpp  magic8.cpp  rockpaperscissors.cpp  sortinghat.cpp  space.cpp  valentyne.cpp
projekt/: projekt.md
python/: ukol_z_hodiny.py
sprava_studentu/: main.cpp  readme.txt  studenti_serazeno.txt
sqlitedatabaseee/: database.cpp  database.h  new12.cpp  new12.db  new12.sql
try/: try.cpp
(+156 files in other folders)
